# mlx-chat

./: pyproject.toml
src/le_chat/: app.py  audio.py  menus.py
src/le_chat/agent/: agent.py  huggingface_utils.py
src/le_chat/agent/llm_agent/: agent.py
src/le_chat/agent/mlx_vlm_agent/: agent.py  prompt.py
src/le_chat/agent/stt_model/: __init__.py  base.py  model.py
src/le_chat/screens/: chat.py  chat.tcss  interaction_demo.py  launcher.py  launcher.tcss  loading.py  settings.py  settings.tcss  stt.py  stt.tcss
src/le_chat/utils/prompt/: extract.py
src/le_chat/widgets/: conversation.py  non_selectable_label.py  prompt.py  response.py  stt_response.py  throbber.py  user_input.py
src/mlx_chat/: app.py  interaction_item_schema.py
src/mlx_chat/agent/: agent.py
src/mlx_chat/agent/llm_agent/: __init__.py  agent.py
src/mlx_chat/agent/mlx_vlm_agent/: __init__.py  agent.py
src/mlx_chat/screens/: interaction_demo.py  launcher.py  loading.py  loading.tcss  main.py
src/mlx_chat/widgets/: conversation.py  grid_select.py
