[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "le-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx-audio>=0.2.10",
    "mlx-lm>=0.29.1",
    "mlx-vlm>=0.3.9",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.3",
    "textual>=7.2.0",
    "textual-dev>=1.8.0",
    "torchvision>=0.24.1",
]

[project.scripts]
le-chat = "le_chat.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "llm>=0.28",
]
